--- a/K8S/deployment.yml
+++ b/K8S/deployment.yml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hotstar-deployment
+  name: JioHotstar-deploy
 spec:
-  replicas: 1  # Number of desired replicas
+  replicas: 4  # Number of desired replicas
   selector:
     matchLabels:
       app: hotstar
